Creacion de route para subida ficheros y actualizacion de metricas de usuarios
